# opencv-shuda

AVIPlayer/: CMakeLists.txt  Makefile  main.cpp
CalibrateKinectExtrinsics/: CalibrationThroughImages.xml  Makefile  calibratekinectextrinsics.cpp  calibratekinectextrinsics.hpp  control.yaml  kinect_intrinsics.xml  main.cpp  optimdepth.cpp  optimdepth.hpp
CameraCalib/: CalibrationThroughImages.xml  Makefile  bash.sh  calibrationthroughimages.cpp  calibrationthroughimages.hpp  main.cpp
Data/: CameraIR.yml  CameraRGB.yml  XtionIR.yml  XtionRGB.yml  kinect_intrinsics.yml  xtion_intrinsics.yml
Kinect2D/: Makefile  debug.cpp  keyframe.hpp  main.cpp  out
Kinect3D/: CMakeLists.txt  Makefile  bash.sh  main.cpp
KinectCalib/: Makefile  control.yaml  kinect_intrinsics.xml  main.cpp
SURF/: Makefile  find_obj.cpp
ShudaLib/: CMakeLists.txt  CVUtil.hpp  CalibrateKinect.cpp  CalibrateKinect.hpp  Camera.cpp  Camera.h  Converters.hpp  EigenUtil.hpp  GLUtil.cpp  GLUtil.h  Histogram.cpp  Histogram.h  KeyFrame.cpp  KeyFrame.h  Kinect.h  Makefile  Model.cpp  Model.h  Optim.cpp  Optim.hpp  OptimCamPose.cpp  OptimCamPose.h  OsgSceneMarkers.cpp  OsgSceneMarkers.hpp  OtherUtil.hpp  PlaneObj.cpp  PlaneObj.h  PlaneWorld.cpp  PlaneWorld.h  Utility.hpp  VideoSource.hpp  VideoSourceKinect.cpp  VideoSourceKinect.hpp  calibratekinect.cpp  calibratekinect.hpp  optim.cpp  optim.hpp
ShudaLib/cuda/: CudaLib.cu  CudaLib.h  RayCaster.cu  RayCaster.h  Registartion.h  Registration.cu  Volume.cu  Volume.h  common.hpp  device.hpp
ShudaLib/cuda/pcl/: device.hpp  internal.h  vector_math.hpp
ShudaLib/kinect_fusion/: CMakeLists.txt
ShudaLib/kinect_liveview/: CMakeLists.txt
ShudaLib/render_normal/: CMakeLists.txt  RenderNormal.cpp
ShudaLib/test/: TestConverters.cpp  TestCuda.cpp
SmoothingVideo/: main.cpp
TileImages/: Makefile  main.cpp
WebCam/: main.cpp
boost_xml_to_opencv_yml/: BoostXML2CVYML.cpp  CMakeLists.txt
brisk_cpu/: BriskCPU.cpp  CMakeLists.txt
brox_optical_flow_gpu/: BroxOpticalFlowGpu.cpp  CMakeLists.txt
btl_descriptor/: CMakeLists.txt  Fast.cpp  Fast.cu  Freak.cpp  Freak.cu  Freak.h  Orb.cpp  Orb.cu  Orb.h  Surf.cpp  Surf.cu  Surf.cuh  Surf.h  TestFreak.cpp
btl_rgbd/: CMakeLists.txt  CVUtil.hpp  CalibrateKinect.cpp  CalibrateKinect.hpp  Camera.cpp  Camera.h  Converters.hpp  CubicGrids.cpp  CubicGrids.h  CyclicBuffer.h  EigenUtil.hpp  GLUtil.cpp  GLUtil.h  Helper.cpp  Histogram.cpp  Histogram.h  KeyFrame.cpp  KeyFrame.h  KinfuTracker.cpp  KinfuTracker.h  MarchingCubs.cpp  MarchingCubs.h  Model.h  Optim.cpp  OptimCamPose.cpp  OtherUtil.hpp  PlaneObj.cpp  PlaneObj.h  PlaneWorld.cpp  Prosac.cpp  Prosac.h  SemiDenseTracker.cpp  SemiDenseTracker.h  SemiDenseTrackerOrb.cpp  SemiDenseTrackerOrb.h  Teapot.h  TestCudaFast.cpp  TestCudaOrb.cpp  TestCudaOrb.h  Utility.hpp  (+6 more)
btl_rgbd/classifier/: CMakeLists.txt  Classifier.cpp
btl_rgbd/cuda/: CudaLib.cu  CudaLib.h  PclMarchingCubes.cu  PclMarchingCubes.h  PclRayCaster.cu  PclVolume.cu  RayCaster.cu  RayCaster.h  Registartion.h  Registration.cu  SemiDenseTracker.cu  SemiDenseTracker.cuh  SemiDenseTrackerOrb.cu  SemiDenseTrackerOrb.cuh  Volume.cu  Volume.h
btl_rgbd/cuda/cv/: common.hpp
btl_rgbd/cuda/pcl/: device.hpp  internal.h  vector_math.hpp
btl_rgbd/kinect_fusion/: CMakeLists.txt  KinectFusion.cpp  KinectFusion.yml
btl_rgbd/kinect_fusion_qglviewer/: CMakeLists.txt  KinectFusionQGLViewer.yml  Main.cpp  SimpleViewer.cpp  SimpleViewer.h
btl_rgbd/kinect_fusion_simulator/: CMakeLists.txt  KinectFusionSimulator.cpp
btl_rgbd/kinect_liveview/: CMakeLists.txt  KinectLiveview.cpp  KinectLiveview.yml
btl_rgbd/render_normal/: CMakeLists.txt  RenderNormal.cpp
btl_rgbd/render_qglviewer/: CMakeLists.txt  RenderQGlviewer.yml  main.cpp  simpleViewer.cpp  simpleViewer.h
btl_rgbd/test/: TestConverters.cpp  TestCuda.cpp  TestCuda.h  TryCpp.cpp  TryCpp.h
btl_tracker/: CMakeLists.txt  CudaHelper.hpp  Helper.cpp  SemiDenseTracker.cpp  SemiDenseTracker.cu  SemiDenseTracker.cuh  SemiDenseTracker.h  SemiDenseTrackerFHessFreak.cpp  SemiDenseTrackerFHessFreak.cu  SemiDenseTrackerFHessFreak.cuh  SemiDenseTrackerFHessFreak.h  SemiDenseTrackerOrb.cpp  SemiDenseTrackerOrb.cu  SemiDenseTrackerOrb.cuh  TrackerSimpleFreak.cpp  TrackerSimpleFreak.h
exmaple1/: CMakeLists.txt  Makefile  main.cpp
farnback_optical_flow_gpu/: CMakeLists.txt  FarnebackOpticalFlowGpu.cpp
fast_gpu/: CMakeLists.txt  FastGpuKeypointExtractionAndMatcher.cpp
freak/: CMakeLists.txt  Freak.cpp  Freak.cu  Freak.cuh  Freak.h  FreakKeypointMatcher.cpp  Surf.cpp  Surf.cu  TestFreak.h
freak_cpu/: CMakeLists.txt  FreakCPU.cpp
freak_shuda/: FreakKeypointMatcher.cpp
gpu/: CMakeLists.txt
kinect_capturer_openni/: CMakeLists.txt  KinectCapturerOpenNI.cpp  KinectCapturerOpenNI.h
kinect_fusion/: CMakeLists.txt  KeyFrame.hpp  KinectFusion.cpp
kinect_liveview/: CMakeLists.txt  KinectLiveview.cpp  Makefile
orb_gpu/: CMakeLists.txt  OrbKeypointMatcher.cpp
orb_shuda/: CMakeLists.txt  Main.cpp  Orb.cpp  Orb.cu
render_normal/: CMakeLists.txt  RenderNormal.cpp  RenderingNormal.cpp
render_volume/: CMakeLists.txt  RenderVolume.cpp
rendering_normal/: CMakeLists.txt  RenderingNormal.cpp
semi_dense_tracker/: CMakeLists.txt  CudaHelper.hpp  Fast.h  Helper.cpp  Helper.hpp  Main.cpp  New Text Document.txt  Orb.cpp  Orb.cu  Orb.h  SemiDenseTracker.cpp  SemiDenseTracker.cu  SemiDenseTracker.h  SemiDenseTrackerOrb.cpp  SemiDenseTrackerOrb.cu  SemiDenseTrackerOrb.h  TestCudaFast.cpp  TestCudaFast.h  TestCudaOrb.cpp  TestCudaOrb.h  TestSemiDense.cpp
single_frame_3d_fitting/: CMakeLists.txt  SingleFrame3DFitting.cpp
surf/: find_obj.cpp
surf_gpu/: CMakeLists.txt  Surf.cpp  Surf.cu  Surf.h  SurfKeypointMatcher.cpp
tutorial_camera_calibration/: CMakeLists.txt  CameraCalib.cpp  VID5.xml
video_converter/: CMakeLists.txt  VideoConverter.cpp
video_player/: main.cpp
video_player_slider/: Makefile  bash.sh  main.cpp
visual_tracking_dataset/: CMakeLists.txt  GroundTruth.h  Main.cpp  SimpleViewer.cpp  SimpleViewer.h  VisualTrackingDataset.yml  VisualTrackingDatasetCameraParam.yml  (+2 more)
(+5 files in other folders)
